--- a/ppg/pg-12-major-upgrade/tasks/main.yml
+++ b/ppg/pg-12-major-upgrade/tasks/main.yml
@@ -67,6 +67,8 @@
     - percona-postgresql-plperl-12-dbgsym
     - percona-postgresql-plpython3-12-dbgsym
     - percona-postgresql-pltcl-12-dbgsym
+    - percona-postgresql-client-common
+    - percona-postgresql-common
   when: ansible_os_family == "Debian"
 
 - name: install Percona Platform for PostgreSQL deb packages
@@ -101,6 +103,8 @@
     - percona-postgresql12-server
     - percona-postgresql12-test
     - percona-postgresql12-debuginfo
+    - percona-postgresql-client-common
+    - percona-postgresql-common
   when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
 - name: install Percona Platform for PostgreSQL rpm packages for RHEL
@@ -133,6 +137,8 @@
       - percona-postgresql12-pltcl-debuginfo
       - percona-postgresql12-server-debuginfo
       - percona-postgresql12-test-debuginfo
+      - percona-postgresql-client-common
+      - percona-postgresql-common
   when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: Initialize Postgres RHEL
