--- a/ppg/pg-12-full-major-upgrade/playbooks/side_effect.yml
+++ b/ppg/pg-12-full-major-upgrade/playbooks/side_effect.yml
@@ -101,9 +101,8 @@
         state: stopped
       when: ansible_os_family == "Debian"
 
-    - name: Kill postmaster for Debian based
-      command: sudo pkill postgres
-      when: ansible_os_family == "Debian"
+    - pause:
+        minutes: 1
 
     - name: Execute pg_upgrade RHEL
       command: /usr/pgsql-12/bin/pg_upgrade --old-bindir /usr/pgsql-11/bin --new-bindir /usr/pgsql-12/bin --old-datadir /var/lib/pgsql/11/data --new-datadir /var/lib/pgsql/12/data --link
