--- a/pgbouncer/ppg-14/tasks/main.yml
+++ b/pgbouncer/ppg-14/tasks/main.yml
@@ -93,23 +93,23 @@
     version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
   become_user: postgres
 
-- name: Autogen pgbouncer
-  shell: ./autogen.sh
-  args:
-    chdir: /tmp/pgbouncer
-  become_user: postgres
+#- name: Autogen pgbouncer
+#  shell: ./autogen.sh
+#  args:
+#    chdir: /tmp/pgbouncer
+#  become_user: postgres
 
-- name: Configure pgbouncer
-  shell: ./configure --prefix=/usr/local
-  args:
-    chdir: /tmp/pgbouncer
-  become_user: postgres
-
-- name: Build pgbouncer from sources
-  make:
-    chdir: "/tmp/pgbouncer"
-
-- name: Install pgbouncer from sources
-  make:
-    target: install
-    chdir: "/tmp/pgbouncer"
+#- name: Configure pgbouncer
+#  shell: ./configure --prefix=/usr/local
+#  args:
+#    chdir: /tmp/pgbouncer
+#  become_user: postgres
+#
+#- name: Build pgbouncer from sources
+#  make:
+#    chdir: "/tmp/pgbouncer"
+#
+#- name: Install pgbouncer from sources
+#  make:
+#    target: install
+#    chdir: "/tmp/pgbouncer"
