--- a/pgbouncer/ppg-14/tasks/main.yml
+++ b/pgbouncer/ppg-14/tasks/main.yml
@@ -58,7 +58,6 @@
   args:
     executable: /bin/bash
 
-
 - shell: gcc --version
   register: gcc
 
@@ -85,7 +84,7 @@
   git:
     repo: "{{ repo }}"
     version: "{{ version }}"
-    dest: /tmp/pgbouncer
+    dest: /var/lib/pgsql/pgbouncer
     recursive: yes
     update: yes
   vars:
@@ -96,7 +95,7 @@
 - name: Autogen pgbouncer
   shell: ./autogen.sh
   args:
-    chdir: /tmp/pgbouncer
+    chdir: /var/lib/pgsql/pgbouncer
   become_user: postgres
 
 - name: Configure pgbouncer
