--- a/pgbouncer/ppg-14/tasks/main.yml
+++ b/pgbouncer/ppg-14/tasks/main.yml
@@ -101,5 +101,5 @@
 - name: Configure pgbouncer
   shell: ./configure --prefix=/usr/local
   args:
-    chdir: /tmp/pgbouncer
+    chdir: /var/lib/pgsql/pgbouncer
   become_user: postgres
