--- a/pg_stat_monitor/ppg-14/tasks/main.yml
+++ b/pg_stat_monitor/ppg-14/tasks/main.yml
@@ -48,6 +48,13 @@
     - gcc
     - gcc-c++
 
+- name: Install perl packages
+  cpanm:
+    name: "{{ item }}"
+  loop:
+    - IPC::RUN
+    - String::Util
+
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-14/bin/postgresql-14-setup initdb
   environment:
