--- a/pg_stat_monitor/ppg-14/tasks/main.yml
+++ b/pg_stat_monitor/ppg-14/tasks/main.yml
@@ -52,8 +52,8 @@
   cpanm:
     name: "{{ item }}"
   loop:
-    - IPC::RUN
-    - String::Util
+    - "IPC::RUN"
+    - "String::Util"
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-14/bin/postgresql-14-setup initdb
