Add perl dependencies for pg_stat_monior

--- a/pg_stat_monitor/ppg-14/tasks/main.yml
+++ b/pg_stat_monitor/ppg-14/tasks/main.yml
@@ -48,9 +48,8 @@
     - gcc
     - gcc-c++
 
-- name: Install perl packages
-  cpanm:
-    name: "{{ item }}"
+- name: Install perl modules
+  command: "cpan install {{ item }}"
   loop:
     - "IPC::RUN"
     - "String::Util"
