--- a/pg_stat_monitor/ppg-14/tasks/main.yml
+++ b/pg_stat_monitor/ppg-14/tasks/main.yml
@@ -47,12 +47,14 @@
     - readline-devel
     - gcc
     - gcc-c++
+    - libipc-run-perl
+    - libsharyanto-string-util-perl
 
-- name: Install perl modules
-  command: "cpan install {{ item }}"
-  loop:
-    - "IPC::RUN"
-    - "String::Util"
+#- name: Install perl modules
+#  command: "cpan install {{ item }}"
+#  loop:
+#    - "IPC::RUN"
+#    - "String::Util"
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-14/bin/postgresql-14-setup initdb
