Add perl dependencies for pg_stat_monior

--- a/pg_stat_monitor/ppg-14/tasks/main.yml
+++ b/pg_stat_monitor/ppg-14/tasks/main.yml
@@ -47,8 +47,8 @@
     - readline-devel
     - gcc
     - gcc-c++
-    - libipc-run-perl
-    - libsharyanto-string-util-perl
+    - perl-String-Util
+    - perl-IPC-Run
 
 #- name: Install perl modules
 #  command: "cpan install {{ item }}"
