--- a/pg_stat_monitor/ppg-14/molecule/default/molecule.yml
+++ b/pg_stat_monitor/ppg-14/molecule/default/molecule.yml
@@ -23,7 +23,12 @@ provisioner:
     converge: ../../playbooks/playbook.yml
     verify: ../../playbooks/verify.yml
 verifier:
-  name: ansible
+  name: testinfra
+  directory: ../../../tests/
+  options:
+    verbose: true
+    s: true
+    junitxml: report.xml
 scenario:
   destroy_sequence:
     - destroy
