--- a/tasks/install_ppg14_tools.yml
+++ b/tasks/install_ppg14_tools.yml
@@ -1,4 +1,14 @@
 ---
+- name: Percona Platform for PostgreSQL rpm packages for RHEL and additional tools
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+    - http://repo.openfusion.net/centos7-x86_64/perl-String-Util-1.23-1.of.el7.noarch.rpm
+    - http://repo.openfusion.net/centos7-x86_64/perl-IPC-Run-0.92-1.of.el7.noarch.rpm
+
   - name: Install additional tools for pgbackrest test Debian
     apt:
       name: "{{ packages }}"
@@ -24,6 +34,12 @@
         - libzstd-dev
         - bzip2
         - libbz2-dev
+#        - libsharyanto-string-util-perl
+        - libipc-run-perl
+    when: ansible_os_family == "Debian"
+
+  - name: Install cpan install String::Util
+    command: "cpan install String::Util"
     when: ansible_os_family == "Debian"
 
   - name: Install pgaudit Debian
@@ -308,7 +324,7 @@
   - name: Clone pg_stat_monitor sources
     git:
       repo: https://github.com/percona/pg_stat_monitor.git
-      version: 1.0.0-rc.1
+      version: main
       dest: /tmp/pg_stat_monitor
     become_user: postgres
 
