--- a/playbooks/prepare.yml
+++ b/playbooks/prepare.yml
@@ -5,6 +5,21 @@
   become_method: sudo
   gather_facts: true
   tasks:
+    - name: Edit mirrorlist for Centos8 repos
+      shell: "sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-Linux-*"
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "8"
+
+    - name: Edit baseurl for Centos8 repos
+      shell: "sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-Linux-*"
+      when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "8"
+
+    - name: Edit repos for Centos8
+      replace:
+        path: /etc/hosts
+        regexp: '(\s+)old\.host\.name(\s+.*)?$'
+        replace: '\1new.host.name\2'
+      when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
     - name: setup ca-certificates release
       yum:
         name: ca-certificates
