--- a/tasks/install_ppg14_tools.yml
+++ b/tasks/install_ppg14_tools.yml
@@ -8,7 +8,7 @@
       packages:
       - http://repo.openfusion.net/centos7-x86_64/perl-String-Util-1.23-1.of.el7.noarch.rpm
       - http://repo.openfusion.net/centos7-x86_64/perl-IPC-Run-0.92-1.of.el7.noarch.rpm
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
 
   - name: Install additional tools for pgbackrest test Debian
     apt:
