--- a/pg_stat_monitor/ppg-12/molecule/default/molecule.yml
+++ b/pg_stat_monitor/ppg-12/molecule/default/molecule.yml
@@ -22,8 +22,15 @@ provisioner:
     prepare: ../../../../playbooks/prepare.yml
     converge: ../../playbooks/playbook.yml
     verify: ../../playbooks/verify.yml
+#verifier:
+#  name: ansible
 verifier:
-  name: ansible
+  name: testinfra
+  directory: ../../../tests/
+  options:
+    verbose: true
+    s: true
+    junitxml: report.xml
 scenario:
   destroy_sequence:
     - destroy
