--- a/tasks/install_ppg14_tools.yml
+++ b/tasks/install_ppg14_tools.yml
@@ -8,6 +8,7 @@
       packages:
       - http://repo.openfusion.net/centos7-x86_64/perl-String-Util-1.23-1.of.el7.noarch.rpm
       - http://repo.openfusion.net/centos7-x86_64/perl-IPC-Run-0.92-1.of.el7.noarch.rpm
+      - http://mirror.centos.org/centos/7/os/x86_64/Packages/perl-Text-CSV_XS-1.00-3.el7.x86_64.rpm
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
 
   - name: Install additional tools for pgbackrest test Debian
@@ -37,6 +38,7 @@
         - libbz2-dev
 #        - libsharyanto-string-util-perl
         - libipc-run-perl
+        - libtext-csv-xs-perl
     when: ansible_os_family == "Debian"
 
   - name: Install pgaudit Debian
@@ -127,17 +129,17 @@
         wal_level = logical
     when: ansible_os_family == "RedHat"
 
-  - name: Debian. Edit pg_stat_monitor.pgsm_bucket_time
-    lineinfile:
-      path: /etc/postgresql/14/main/postgresql.conf
-      line: pg_stat_monitor.pgsm_bucket_time = 600
-    when: ansible_os_family == "Debian"
-
-  - name: RHEL. Edit pg_stat_monitor.pgsm_bucket_time
-    lineinfile:
-      path: /var/lib/pgsql/14/data/postgresql.conf
-      line: pg_stat_monitor.pgsm_bucket_time = 600
-    when: ansible_os_family == "RedHat"
+#  - name: Debian. Edit pg_stat_monitor.pgsm_bucket_time
+#    lineinfile:
+#      path: /etc/postgresql/14/main/postgresql.conf
+#      line: pg_stat_monitor.pgsm_bucket_time = 600
+#    when: ansible_os_family == "Debian"
+#
+#  - name: RHEL. Edit pg_stat_monitor.pgsm_bucket_time
+#    lineinfile:
+#      path: /var/lib/pgsql/14/data/postgresql.conf
+#      line: pg_stat_monitor.pgsm_bucket_time = 600
+#    when: ansible_os_family == "RedHat"
 
   - name: Restart Postgres RHEL
     service:
