--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -37,6 +37,7 @@
         - bzip2
         - libbz2-dev
         - libtext-csv-xs-perl
+        - libipc-run-perl
     when: ansible_os_family == "Debian"
 
   - name: Install pgaudit Debian
