--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -11,7 +11,7 @@
 #    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
   - name: Percona Platform for PostgreSQL rpm packages for RHEL and additional tools
     cpanm:
-      name: "{{ item.name }}"
+      name: "{{ item }}"
     with_items:
         - IPC::RUN
         - String::Util
