Fix ansible task

--- a/tasks/install_ppg14_tools.yml
+++ b/tasks/install_ppg14_tools.yml
@@ -14,9 +14,9 @@
     cpanm:
       name: "{{ item }}"
     with_items:
-        - IPC::RUN
-        - String::Util
-        - Data::Str2Num
+        - "IPC::RUN"
+        - "String::Util"
+        - "Data::Str2Num"
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
 
 
