--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -13,9 +13,9 @@
     cpanm:
       name: "{{ item }}"
     with_items:
-        - IPC::RUN
-        - String::Util
-        - Data::Str2Num
+        - "IPC::RUN"
+        - "String::Util"
+        - "Data::Str2Num"
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
 
   - name: Install additional tools for pgbackrest test Debian
