Fix ansible task

--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -9,14 +9,13 @@
 #        - http://repo.openfusion.net/centos7-x86_64/perl-IPC-Run-0.92-1.of.el7.noarch.rpm
 #        - http://mirror.centos.org/centos/7/os/x86_64/Packages/perl-Text-CSV_XS-1.00-3.el7.x86_64.rpm
 #    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
-  - name: Percona Platform for PostgreSQL rpm packages for RHEL and additional tools
-    cpanm:
-      name: "{{ item }}"
-    with_items:
-        - "IPC::RUN"
-        - "String::Util"
-        - "Data::Str2Num"
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
+#  - name: Percona Platform for PostgreSQL rpm packages for RHEL and additional tools
+#    shell: "perl -MCPAN -e 'install {{ item }}'"
+#    with_items:
+#        - "IPC::RUN"
+#        - "String::Util"
+#        - "Data::Str2Num"
+#    when: ansible_os_family == "RedHat" and ansible_distribution_major_version != "8"
 
   - name: Install additional tools for pgbackrest test Debian
     apt:
