--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -510,7 +510,7 @@
     vars:
       packages:
       - etcd
-      - haproxy
+      - percona-haproxy
       - python3-python-etcd
     when: ansible_os_family == "RedHat"
 
@@ -529,7 +529,7 @@
     vars:
       packages:
         - etcd
-        - haproxy
+        - percona-haproxy
     when: ansible_os_family == "Debian"
 
   - name: Create /etc/patroni directory
