--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -490,7 +490,7 @@
     vars:
       packages:
       - etcd
-      - haproxy
+      - percona-haproxy
       - python3-python-etcd
     when: ansible_os_family == "RedHat"
 
@@ -509,7 +509,7 @@
     vars:
       packages:
         - etcd
-        - haproxy
+        - percona-haproxy
     when: ansible_os_family == "Debian"
 
   - name: Create /etc/patroni directory
