--- a/ppg/pg-13-components-with-vanila/molecule/debian-11/molecule.yml
+++ b/ppg/pg-13-components-with-vanila/molecule/debian-11/molecule.yml
@@ -20,17 +20,16 @@ provisioner:
     create: ../../../../playbooks/create.yml
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
-    cleanup: ../../playbooks/cleanup.yml
+    cleanup: ../../playbooks/cleanup-deb.yml
     converge: ../../playbooks/playbook.yml
 verifier:
   name: testinfra
-  directory: ../../../tests/tests_ppg
+  directory: ../../../tests/tests_ppg/test_tools
   options:
     verbose: true
     s: true
     junitxml: report.xml
 scenario:
-  name: debian-11
   destroy_sequence:
     - destroy
   clenup_sequence:
@@ -41,4 +40,5 @@ scenario:
     - prepare
     - converge
     - verify
+    - cleanup
     - destroy
