--- a/ppg/pg-13-setup/molecule/ubuntu-jammy/molecule.yml
+++ b/ppg/pg-13-setup/molecule/ubuntu-jammy/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-04aa66cdfe687d427
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.small
+    instance_type: t2.micro
     ssh_user: ubuntu
     root_device_name: /dev/sda1
     instance_tags:
