--- a/ppg/pg-11-components-with-vanila/molecule/debian-11/molecule.yml
+++ b/ppg/pg-11-components-with-vanila/molecule/debian-11/molecule.yml
@@ -24,13 +24,12 @@ provisioner:
     converge: ../../playbooks/playbook.yml
 verifier:
   name: testinfra
-  directory: ../../../tests/tests_ppg
+  directory: ../../../tests/tests_ppg/test_tools
   options:
     verbose: true
     s: true
     junitxml: report.xml
 scenario:
-  name: debian-11
   destroy_sequence:
     - destroy
   clenup_sequence:
@@ -41,4 +40,6 @@ scenario:
     - prepare
     - converge
     - verify
+    - cleanup
     - destroy
+
