--- a/tasks/install_pg11.yml
+++ b/tasks/install_pg11.yml
@@ -23,11 +23,11 @@
     when: ansible_os_family == "Debian"
 
   - name: Add PostgreSQL YUM Repository RHEL7
-    yum: name=https://download.postgresql.org/pub/repos/yum/11/redhat/rhel-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm state=present
+    yum: name=https://download.postgresql.org/pub/repos/yum/11/redhat/rhel-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm state=present validate_certs=false
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
 
   - name: Add PostgreSQL YUM Repository RHEL8
-    yum: name=https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm state=present
+    yum: name=https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm state=present validate_certs=false
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Install vanila postgres RHEL
