--- a/ppg/pg-11-minor-upgrade/molecule/debian-11/molecule.yml
+++ b/ppg/pg-11-minor-upgrade/molecule/debian-11/molecule.yml
@@ -30,7 +30,6 @@ verifier:
     s: true
     junitxml: report.xml
 scenario:
-  name: debian-11
   destroy_sequence:
     - destroy
   clenup_sequence:
@@ -41,4 +40,5 @@ scenario:
     - prepare
     - converge
     - verify
+    - cleanup
     - destroy
