--- a/wal2json/ppg-14/tasks/main.yml
+++ b/wal2json/ppg-14/tasks/main.yml
@@ -49,10 +49,9 @@
     - gcc-c++
 
 - name: Initialize Postgres RHEL
-  command: /usr/pgsql-14/bin/initdb -A trust -k /var/lib/pgsql/14/data
+  command: /usr/pgsql-14/bin/postgresql-14-setup initdb
   environment:
     PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-  become_user: postgres
 
 - shell: gcc --version
   register: gcc
@@ -76,28 +75,45 @@
 
 - debug: var=gcc.stdout_lines
 
-- name: Clone pg_repack sources
+- name: Clone wal2json sources
   git:
     repo: "{{ repo }}"
     version: "{{ version }}"
-    dest: /tmp/pg_repack
+    dest: /tmp/wal2json
   vars:
     repo: "{{ lookup('env', 'COMPONENT_REPO') }}"
     version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
   become_user: postgres
 
-- name: Build pg_repack from sources
+- name: Build wal2json from sources
+  make:
+    chdir: "/tmp/wal2json"
+
+- name: Install wal2json from sources
   make:
     target: install
-    chdir: "/tmp/pg_repack"
-    params:
-      USE_PGXS: 1
+    chdir: "/tmp/wal2json"
 
-- name: Create a symbolic link
-  ansible.builtin.file:
-    src: /usr/pgsql-14/bin/pg_repack
-    dest: /usr/bin/pg_repack
-    state: link
+- name: Set wal level
+  lineinfile:
+    path: /var/lib/pgsql/14/data/postgresql.conf
+    line: wal_level = logical
+
+- name: Set wal senders
+  lineinfile:
+    path: /var/lib/pgsql/14/data/postgresql.conf
+    line: max_wal_senders = 10
+
+- name: Set replication slots
+  lineinfile:
+    path: /var/lib/pgsql/14/data/postgresql.conf
+    line: max_replication_slots = 10
+
+- name: Restart Postgres RHEL
+  service:
+    name: postgresql-14
+    state: restarted
+  register: out
 
 - name: Start Postgres RHEL
   service:
