--- a/pgbadger/ppg-14/tasks/main.yml
+++ b/pgbadger/ppg-14/tasks/main.yml
@@ -52,6 +52,7 @@
     - perl-devel
     - perl-JSON-XS.x86_64
     - perl-Text-CSV
+    - perl-Text-CSV_XS
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-14/bin/postgresql-14-setup initdb
