Add openfusion release

--- a/pg_stat_monitor/ppg-14/tasks/main.yml
+++ b/pg_stat_monitor/ppg-14/tasks/main.yml
@@ -27,6 +27,7 @@
     name: "{{ packages }}"
     state: latest
     update_cache: yes
+    enablerepo: rpmfusion-*
   vars:
     packages:
     - percona-postgresql-client-common
