--- a/pg_repack/ppg-14/tasks/main.yml
+++ b/pg_repack/ppg-14/tasks/main.yml
@@ -48,17 +48,13 @@
     - gcc
     - gcc-c++
     - lz4
+    - lz4-devel
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-14/bin/initdb -A trust -k /var/lib/pgsql/14/data
   environment:
     PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   become_user: postgres
-
-- shell: gcc --version
-  register: gcc
-
-- debug: var=gcc.stdout_lines
 
 - name: Enable gcc 7
   shell: echo "source /opt/rh/devtoolset-7/enable" | sudo tee -a /etc/profile;
@@ -71,11 +67,6 @@
 
 - name: Set symbol link
   shell: ln -s /opt/rh/devtoolset-7/root/usr/bin/gcc /usr/bin/gcc
-
-- shell: gcc --version
-  register: gcc
-
-- debug: var=gcc.stdout_lines
 
 - name: Clone pg_repack sources
   git:
