--- a/pgbackrest/ppg-14/tasks/main.yml
+++ b/pgbackrest/ppg-14/tasks/main.yml
@@ -37,7 +37,6 @@
   delay: 10
   register: result
   until: result is not failed
-  when: ansible_os_family == "Debian"
 
 - name: install Percona Platform for PostgreSQL deb packages
   apt:
@@ -59,17 +58,6 @@
     - percona-postgresql-pltcl-14
     - percona-postgresql-server-dev-14
     - percona-postgresql-server-dev-all
-  when: ansible_os_family == "Debian"
-
-- shell: gcc --version
-  register: gcc
-
-- debug: var=gcc.stdout_lines
-
-- shell: gcc --version
-  register: gcc
-
-- debug: var=gcc.stdout_lines
 
 - name: Clone pgbackrest sources
   become: yes
@@ -88,8 +76,7 @@
     groups: sudo
     append: yes
 
-- name: Restart Postgres RHEL
+- name: Restart Postgres
   service:
     name: postgresql
     state: restarted
-  register: out
