--- a/tasks/setup_repo.yml
+++ b/tasks/setup_repo.yml
@@ -19,15 +19,15 @@
   - set_fact:
       major_repo: "{{ lookup('env', 'MAJOR_REPO') }}"
 
-  - name: setup repo with percona-release ppg-{{ version }} with minor prefix
+  - name: setup repo with percona-release {{ version }} with minor prefix
     command: percona-release setup ppg-{{ version }}
     vars:
       repo: "{{ lookup('env', 'REPO') }}"
       version: "{{ lookup('env', 'VERSION') }}"
     when: not major_repo
 
-  - name: setup repo with percona-release ppg-{{ version }}
-    command: percona-release setup ppg-{{ version }}
+  - name: setup repo with percona-release {{ version }}
+    command: percona-release setup {{ version }}
     vars:
       repo: "{{ lookup('env', 'REPO') }}"
       version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
