--- a/tasks/enable_repo.yml
+++ b/tasks/enable_repo.yml
@@ -27,7 +27,7 @@
     when: not major_repo
 
   - name: setup repo with percona-release {{ version }}
-    command: percona-release enable-only {{ version }} {{ repo }}
+    command: percona-release enable-only ppg-{{ version }} {{ repo }}
     vars:
       repo: "{{ lookup('env', 'REPO') }}"
       version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
