--- a/patroni/ppg-11/files/haproxy.cfg
+++ b/patroni/ppg-11/files/haproxy.cfg
@@ -23,3 +23,4 @@ listen batman
     default-server inter 3s fall 3 rise 2 on-marked-down shutdown-sessions
     server postgresql_127.0.0.1_5432 127.0.0.1:5432 maxconn 100 check port 8008
     server postgresql_127.0.0.1_5433 127.0.0.1:5433 maxconn 100 check port 8009
+    server postgresql_127.0.0.1_5434 127.0.0.1:5434 maxconn 100 check port 8010
