--- a/patroni/ppg-13/molecule/default/molecule.yml
+++ b/patroni/ppg-13/molecule/default/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: centos8-${BUILD_NUMBER}-${JOB_NAME}
+  - name: patronicentos8-${BUILD_NUMBER}-${JOB_NAME}
     region: eu-central-1
     image: ami-0e337c7f9752d9d34
     vpc_subnet_id: subnet-085deaca8c1c59a4f
