--- a/tasks/setup_repo.yml
+++ b/tasks/setup_repo.yml
@@ -20,14 +20,14 @@
       major_repo: "{{ lookup('env', 'MAJOR_REPO') }}"
 
   - name: setup repo with percona-release {{ version }} with minor prefix
-    command: percona-release setup {{ version }}
+    command: percona-release setup -y {{ version }}
     vars:
       repo: "{{ lookup('env', 'REPO') }}"
       version: "{{ lookup('env', 'VERSION') }}"
     when: not major_repo
 
   - name: setup repo with percona-release {{ version }}
-    command: percona-release setup ppg-{{ version }}
+    command: percona-release setup -y ppg-{{ version }}
     vars:
       repo: "{{ lookup('env', 'REPO') }}"
       version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
